--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     Contact Me
                                     <span></span>
                                 </a>
-                                <a href="https://drive.google.com/file/d/1qukKTu4jR741Wq7Ex-16Y2keg78VVEa8/view?usp=sharing" class="sub-menu-link magnet" target="_blank">
+                                <a href="https://drive.google.com/file/d/1oUY89jUvY1bRvSqxLvUSEkKRKTk3OoJx/view?usp=drive_link " class="sub-menu-link magnet" target="_blank">
                                     My Resume
                                     <span></span>
                                 </a>
