--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     Contact Me
                                     <span></span>
                                 </a>
-                                <a href="https://drive.google.com/file/d/1FkNXn8r2WDuTbLC6c3AKqIKWmWeifJzk/view?usp=drive_link" class="sub-menu-link magnet" target="_blank">
+                                <a href="https://drive.google.com/file/d/1FkNXn8r2WDuTbLC6c3AKqIKWmWeifJzk/view" class="sub-menu-link magnet" target="_blank">
                                     My Resume
                                     <span></span>
                                 </a>
