--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
                     </div>
                     <div class="slide">
                         <div class="img">
+                            <img src="/Images/mongodb.png" alt="">
+                        </div>
+                        <div class="tag magnet">
+                            MongoDB
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="img">
                             <img src="/Images/nodejs.png" alt="">
                         </div>
                         <div class="tag magnet">
