--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     Contact Me
                                     <span></span>
                                 </a>
-                                <a href="https://drive.google.com/file/d/1FkNXn8r2WDuTbLC6c3AKqIKWmWeifJzk/view" class="sub-menu-link magnet" target="_blank">
+                                <a href="https://drive.google.com/file/d/1qukKTu4jR741Wq7Ex-16Y2keg78VVEa8/view?usp=sharing" class="sub-menu-link magnet" target="_blank">
                                     My Resume
                                     <span></span>
                                 </a>
@@ -85,32 +85,32 @@
                 <div id="project_images">
                     <div id="fleft">
                         <div class="fleftlm">
+                            <h3>An AI-powered platform that generates and speaks content</h3>
+                            <h1>VocalAI</h1>
+                            <h4>Express, Node.js, React, and CSS and GenAI</h4>
+                        </div>
+                        <div class="fleftlm">
+                            <h3>A real-time chat application with multiple features</h3>
+                            <h1>Snappy</h1>
+                            <h4>MongoDB, React, Express, Node.js, Axios, Shadcn, etc.</h4>
+                        </div>
+                        <div class="fleftlm">
                             <h3>A Employee Management System</h3>
                             <h1>EManageX</h1>
                             <h4>HTML, CSS, JavaScript, React js, and TailwindCSS</h4>
                         </div>
-                        <div class="fleftlm">
-                            <h3>A Personal Project</h3>
-                            <h1>Movie Recommendation Website</h1>
-                            <h4>HTML, CSS, JavaScript, and Libraries</h4>
-                        </div>
-                        <div class="fleftlm">
+                        <div class="fleftlm last">
                             <h3>Provide the shortest path from source to destination, it's a DSA-based project using Dijkstra's algorithm</h3>
                             <h1>RouteXpress</h1>
                             <h4>C++, Graphics.h, and Dijkstra’s algorithm</h4>
                         </div>
-                        <div class="fleftlm last">
-                            <h3>A website which provides details of a LeetCode account</h3>
-                            <h1>Leetcode Metric</h1>
-                            <h4>HTML, CSS, and JavaScript</h4>
-                        </div>
                     </div>
                     <div id="fright">
                         <div class="images">
-                            <img src="/Images/Group1.webp" alt="" loading="lazy">
-                            <img src="/Images/Group2.webp" alt="" loading="lazy">
-                            <img src="/Images/Group3.webp" alt="" loading="lazy">
-                            <img src="/Images/Group4.webp" alt="" loading="lazy">
+                            <img src="/Images/AIproject.webp" alt="" loading="lazy">
+                            <img src="/Images/chatProject.webp" alt="" loading="lazy">
+                            <img src="/Images/emanagex.webp" alt="" loading="lazy">
+                            <img src="/Images/route.webp" alt="" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -121,15 +121,15 @@
                     <div class="sub-menu-wrap1" id="subMenu1">
                         <div class="sub-menu1">
                             <a href="" class="sub-menu-link1 magnet">
+                                FilmFinder: A Movie-Recommendation website
+                                <span></span>
+                            </a>
+                            <a href="" class="sub-menu-link1 magnet">
                                 Weathery: A Weather Forecasting App
                                 <span></span>
                             </a>
                             <a href="" class="sub-menu-link1 magnet">
-                                ShopClone: A Static Amazon Clone Website
-                                <span></span>
-                            </a>
-                            <a href="" class="sub-menu-link1 magnet">
-                                RockPaperScissorX: A Rock, Paper, Scissors Game App
+                                Leetcode Metric: A website which provides details of a LeetCode account
                                 <span></span>
                             </a>
                         </div>
