--- a/index.html
+++ b/index.html
@@ -86,22 +86,30 @@
                     <div id="fleft">
                         <div class="fleftlm">
                             <h3>An AI-powered platform that generates and speaks content</h3>
-                            <h1>VocalAI</h1>
+                            <h1><a href="https://orato-ai-git-main-deepanshis-projects-9c70f4ad.vercel.app/" target="_blank">
+                            VocalAI
+                            </a></h1>
                             <h4>Express, Node.js, React, and CSS and GenAI</h4>
                         </div>
                         <div class="fleftlm">
                             <h3>A real-time chat application with multiple features</h3>
-                            <h1>Snappy</h1>
+                            <h1><a href="https://snappy-frontend-44w6.onrender.com/" target="_blank">
+                                    Snappy
+                                </a></h1>
                             <h4>MongoDB, React, Express, Node.js, Axios, Shadcn, etc.</h4>
                         </div>
                         <div class="fleftlm">
                             <h3>A Employee Management System</h3>
-                            <h1>EManageX</h1>
+                            <h1><a href="https://deepanshi-jn.github.io/EmanageX/" target="_blank">
+                                    EManageX
+                                </a></h1>
                             <h4>HTML, CSS, JavaScript, React js, and TailwindCSS</h4>
                         </div>
                         <div class="fleftlm last">
                             <h3>Provide the shortest path from source to destination, it's a DSA-based project using Dijkstra's algorithm</h3>
-                            <h1>RouteXpress</h1>
+                            <h1><a href="https://github.com/deepanshi-jn/RouteXpress" target="_blank">
+                                    RouteXpress
+                                </a></h1>
                             <h4>C++, Graphics.h, and Dijkstra’s algorithm</h4>
                         </div>
                     </div>
@@ -120,15 +128,15 @@
                     </button>
                     <div class="sub-menu-wrap1" id="subMenu1">
                         <div class="sub-menu1">
-                            <a href="" class="sub-menu-link1 magnet">
+                            <a href="https://moviee-recommendation-website.netlify.app/" target="_blank" class="sub-menu-link1 magnet">
                                 FilmFinder: A Movie-Recommendation website
                                 <span></span>
                             </a>
-                            <a href="" class="sub-menu-link1 magnet">
+                            <a href="https://deepanshi-jn.github.io/weather-app/" target="_blank" class="sub-menu-link1 magnet">
                                 Weathery: A Weather Forecasting App
                                 <span></span>
                             </a>
-                            <a href="" class="sub-menu-link1 magnet">
+                            <a href="https://deepanshi-jn.github.io/LeetcodeMetric/" target="_blank"  class="sub-menu-link1 magnet">
                                 Leetcode Metric: A website which provides details of a LeetCode account
                                 <span></span>
                             </a>
@@ -251,6 +259,9 @@
                     </a>
                     <a class="magnet" href="mailto:deepanshijain1211@gmail.com">
                         <i class="ri-mail-line"></i>
+                    </a>
+                    <a class="magnet" href="https://github.com/deepanshi-jn" target="_blank">
+                        <i class="ri-github-line"></i>
                     </a>
                 </div>
                 <div class="bottom">
