--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div id="home_main">
-                <h1 class="topic reveal">People also call me a</h1>
+                <h1 class="topic-reveal reveal">People also call me a</h1>
                 <div class="headings">
                     <h1 class="heffect reveal">Fullstack Developer</h1>
                 </div>
@@ -168,6 +168,14 @@
             <div id="skill_img">
                 <div class="slide">
                     <div class="img">
+                        <img src="/Images/bootstrap.png" alt="">
+                    </div>
+                    <div class="tag magnet">
+                        Bootstrap
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="img">
                         <img src="/Images/c.png" alt="">
                     </div>
                     <div class="tag magnet">
@@ -238,8 +246,25 @@
                         ReactJs
                     </div>
                 </div>
+                <div class="slide">
+                    <div class="img">
+                        <img src="/Images/shad.png" alt="" style="width: 70px; max-width: 60%; height: auto;">
+                    </div>
+                    <div class="tag magnet">
+                        ShadCN
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="img">
+                        <img src="/Images/tailwind.png" alt="">
+                    </div>
+                    <div class="tag magnet">
+                        TailwindCSS
+                    </div>
+                </div>
             </div>
         </div>
+        
         <div id="certification">
             <div class="lines">
                 <h1>Proof that I came up with it myself</h1>
